samples/_failures_safe/1761394173_b60402_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32a30d37.c: In function ‘main’:
./samples/SAFE/__tmp_32a30d37.c:145:27: error: expected ‘;’ at end of input
  145 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_32a30d37.c:145:21: error: expected declaration or statement at end of input
  145 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_32a30d37.c:145:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32a30d37.c:145:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32a30d37.c:145:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_32a30d37.c:145:21: error: expected declaration or statement at end of input
